--- a/geomemo/package.json
+++ b/geomemo/package.json
@@ -15,8 +15,6 @@
     "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
-    "heroku-prebuild": "echo This runs before Heroku installs dependencies.",
-    "heroku-postbuild": "echo This runs after Heroku installs dependencies, but before Heroku prunes and caches dependencies.",
-    "heroku-cleanup": "echo This runs after Heroku prunes and caches dependencies."
+    "start": "node index.js"
   }
 }
